--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,37 @@
-name: Build GUI Application
+name: Build Application
 
 on: 
   push:
     branches:
-      - main  # 分支名
+      - main  # 监听 main 分支的 push 事件
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v2  # 拉取仓库代码
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v2  # 设置 Python 环境
       with:
-        python-version: '3.12'
+        python-version: '3.12'  # 使用 Python 3.12
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.txt 
 
     - name: Install Nuitka
-      run: pip install nuitka
+      run: pip install nuitka  # 安装 Nuitka 编译工具
 
     - name: Compile with Nuitka
       run: |
         nuitka --standalone --onefile --output-dir=./build app.py
 
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3  # 使用最新的 v3 版本上传构建产物
       with:
-        name: compiled-app
-        path: ./build/
+        name: compiled-app  # 上传的 artifact 名称
+        path: ./build/  # 构建目录
