--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# temp path
-**/temp_output/
-**/temp_image/
+# temp
+.ruff_cache
